Creación de cliente creado correctamente

--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ PORT= 3000
 
 DB_DATABASE=microTech
 DB_USER=root
-DB_PASS=charo987522
+DB_PASS=Ince2024
 DB_HOST=localhost
 DB_PORT=3306
+
+JWT_SECRET=PalabrasssssssClaveSecret
