--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.11.3",
     "pug": "^3.0.3",
     "sequelize": "^6.37.4",
+    "sweetalert2": "^11.14.4",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
