--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon ./index.js",
+    "server": "node --watch ./index.js ",
     "css": "npx tailwindcss -i public/css/tailwind.css -o public/css/app.css --watch",
     "js": "webpack --watch",
     "dev": "concurrently \"npm run css\" \"npm run js\" ",
@@ -42,7 +42,6 @@
   },
   "devDependencies": {
     "concurrently": "^9.0.1",
-    "nodemon": "^3.1.7",
     "tailwindcss": "^3.4.13"
   }
 }
