--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "pug": "^3.0.3",
     "sequelize": "^6.37.4",
